# python-poetry-rust-wheel

./: .gitignore  Cargo.toml  README.md  build.py  pyproject.toml
dfrs/: Cargo.toml
dfrs/src/: lib.rs
pythonpoetryrustwheel/: df.py
